--- a/public/config.html
+++ b/public/config.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Call of Duty: Blackops Twitch Extension</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/config.css" />
     </head>
