--- a/public/panel.html
+++ b/public/panel.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Call of Duty: Blackops Twitch Extension</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="css/panel.css" />
     </head>
     <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
