--- a/public/config.html
+++ b/public/config.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/config.css" />
+        <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     </head>
     <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
         <div class="main-container">
