--- a/public/panel.html
+++ b/public/panel.html
@@ -4,6 +4,7 @@
         <title>Call of Duty: Blackops Twitch Extension</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="css/panel.css" />
+        <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     </head>
     <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
         <div class="container">
