put external cdn assets into extension

--- a/public/panel.html
+++ b/public/panel.html
@@ -17,8 +17,7 @@
             <div class="footer">Your purchase directly supports <span id="username">this channel</span></div>
         </div>
 
-        <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script src="js/panel.js" type="text/javascript"></script>
+        <script src="js/jquery-3.3.1.min.js" ></script>
+        <script src="js/panel.js"></script>
     </body>
 </html>
