--- a/public/config.html
+++ b/public/config.html
@@ -12,9 +12,9 @@
             <div class="title">COD Affiliate</div>
 
             <div class="content">
-                <div>1) COD Affiliate uses the <a href="#">Amazon Affiliate</a> program.</div>
-                <div>2) Install and configure the Amazon Gear extension to get started.</div>
-                <div>3) Find your affiliate ID in the Gear Extension.</div>
+                <div>1) COD Affiliate uses the <a href="https://help.twitch.tv/customer/portal/articles/2785927-joining-the-affiliate-program">Amazon Affiliate</a> program.</div>
+                <div>2) Install and configure the Amazon Gear extension to get started.  You can also sign up for <a href="https://affiliate-program.amazon.com/">Affiliates</a>.</div>
+                <div>3) Find your affiliate ID in the Gear Extension or on the <a href="https://affiliate-program.amazon.com/">affiliate program site</a>.</div>
                 <div>4) Enter your affiliate ID</div>
                 <div>
                     <div class="form-group row">
