add video overlay and new graphics

--- a/public/panel.html
+++ b/public/panel.html
@@ -10,7 +10,7 @@
         <div class="container">
             <a id="reflink" href="#" target="_new">
                 <div class="image">
-                    <img src="img/cod.png" />
+                    <img src="img/coreExtension.png" />
                 </div>
             </a>
             <hr>
