remove jquery & bootstrap. add shadows. add fade animations

--- a/public/video.html
+++ b/public/video.html
@@ -2,20 +2,20 @@
 <html>
     <head>
         <title>Call of Duty: Blackops Twitch Extension</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
         <link rel="stylesheet" href="css/video.css" />
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     </head>
     <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
         <div class="content">
-            <div class="offset">
+            <div class="animated offset" style="opacity:0">
                 <div class="header">
-                    <div class="btn-close">
+                    <div class="animated faster btn-close">
                     </div>
                     <div  class="dropdown">
                     </div>
                 </div>
-                <div class="container" style="display:none">
+                <div class="animated faster container" style="display:none">
                     <a id="reflink" href="#" target="_blank">
                         <div class="image">
                             <img src="img/coreExtension.png" />
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <script src="js/jquery-3.3.1.min.js" ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/panel.js"></script>
         <script src="js/video.js"></script>
     </body>
