package everything in extension

--- a/public/panel.html
+++ b/public/panel.html
@@ -17,7 +17,7 @@
             <div class="footer">Your purchase directly supports <span id="username">this channel</span></div>
         </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/panel.js"></script>
     </body>
 </html>
