--- a/public/config.html
+++ b/public/config.html
@@ -3,7 +3,7 @@
     <head>
         <title>Call of Duty: Blackops Twitch Extension</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/config.css" />
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     </head>
@@ -31,8 +31,8 @@
             </div>
         </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/config.js"></script>
     </body>
 </html>
