--- a/public/video.html
+++ b/public/video.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Call of Duty: Blackops Twitch Extension</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
+        <link rel="stylesheet" href="css/animate.min.css" />
         <link rel="stylesheet" href="css/video.css" />
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     </head>
@@ -12,7 +12,7 @@
                 <div class="header">
                     <div class="animated faster btn-close">
                     </div>
-                    <div  class="dropdown">
+                    <div  class="animated faster dropdown">
                     </div>
                 </div>
                 <div class="animated faster container" style="display:none">
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/panel.js"></script>
         <script src="js/video.js"></script>
     </body>
