--- a/public/config.html
+++ b/public/config.html
@@ -12,10 +12,7 @@
             <div class="title">COD Affiliate</div>
 
             <div class="content">
-                <div>1) COD Affiliate uses the <a href="https://help.twitch.tv/customer/portal/articles/2785927-joining-the-affiliate-program" target="_new">Amazon Affiliate</a> program.</div>
-                <div>2) Install and configure the Amazon Gear extension to get started.  You can also sign up for <a href="https://affiliate-program.amazon.com/" target="_new">Affiliates</a>.</div>
-                <div>3) Find your affiliate ID in the Gear Extension or on the <a href="https://affiliate-program.amazon.com/" target="_new">affiliate program site</a>.</div>
-                <div>4) Enter your affiliate ID</div>
+                <div>The COD Black Ops 4 Preorder extension can be used by any streamers who are enrolled in the Amazon Associates Program. If you’re already enrolled, enter your Amazon Associates ID, or any tracking ID created on your Amazon Associates account, for example drunkendiplom-20 </div>
                 <div>
                     <div class="form-group row">
                         <div class="col-sm-8 mx-sm-3 alert alert-success alert-dismissible fade hide" role="alert">
@@ -28,6 +25,11 @@
                         <!-- <button id="btn-submit" type="submit" class="col-sm-2 btn btn-primary">Update</button> -->
                     </div>
                 </div>
+                <br>
+                <div>If you're not enrolled in the Amazon associates program, go <a href="https://help.twitch.tv/customer/portal/articles/2785927-joining-the-affiliate-program" target="_new">here</a> to enroll.</div>
+                <div>Look in the configuration screen of the Amazon Gear extension.</div>
+                <div>3 Find your Associates ID on the <a href="https://affiliate-program.amazon.com/" target="_new">Amazon Associates Program Page</a>.</div>
+                <div>You can learn more about Amazon Associates, including rates for Twitch partners and affiliates, <a href="https://help.twitch.tv/customer/portal/articles/2867233-gear-on-amazon">here.</a></div>
             </div>
         </div>
 
