Updated 'public/config.html' via CloudCannon

--- a/public/config.html
+++ b/public/config.html
@@ -12,7 +12,7 @@
             <div class="title">COD Affiliate</div>
 
             <div class="content">
-                <div>The COD Black Ops 4 Preorder extension can be used by any streamers who are enrolled in the Amazon Associates Program. If you’re already enrolled, enter your Amazon Associates ID, or any tracking ID created on your Amazon Associates account, for example drunkendiplom-20 </div>
+                <div>The COD Black Ops 4 Preorder extension can be used by any streamers who are enrolled in the Amazon Associates Program. If you’re already enrolled, enter your Amazon Associates ID, or any tracking ID created on your Amazon Associates account, for example drunkendiplom-20 !!!!</div>
                 <div>
                     <div class="form-group row">
                         <div class="col-sm-8 mx-sm-3 alert alert-success alert-dismissible fade hide" role="alert">
